508 contrast fixes

--- a/medication-list/assets/css/layout.css
+++ b/medication-list/assets/css/layout.css
@@ -414,7 +414,7 @@ section {	margin: 20px 15px 10px 15px; }
   	box-shadow:         0px 1px 4px 0px #dadada;
 }
 .header {
-	color: #747474;
+	color: #535353;
 	font-size: 11px;
 	margin: 10px 20px 0px 20px;
 }
